[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automotive_regression_xai"
version = "0.1.0"
requires-python = ">=3.10.11"
description = "A Python package designed to test the pre-trained models with various Explainable AI (XAI) methods, enabling to gain deeper insights into their models."
authors = [
  {name = "Julian Müller", email = "julian.mueller@mercedes-benz.com"}
]

maintainers = [
  {name = "Julian Müller", email = "julian.mueller@mercedes-benz.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["machine learning", "explainable ai", "automotive"]
classifiers = [
  "Programming Language :: Python",
  "Natural Language :: English"
]

dependencies = [
  "data==0.4",
  "keras==3.6.0",
  "lime==0.2.0.1",
  "matplotlib==3.9.2",
  "numpy==1.26.0",
  "pandas==2.2.3",
  "PyALE==1.2.0",
  "ray[tune]==2.39.0",
  "scikit-learn==1.5.2",
  "seaborn==0.13.2",
  "shap==0.46.0",
  "tensorflow==2.18.0",
  "joblib==1.2.0",
  "fsspec==2023.6.0",
  "asammdf==8.0.1",
  "logger==1.4",
]

[tool.setuptools.packages.find]
where = ["src"] 

[project.scripts]
main = "automotive_regression_xai.automative_xai:main"

